// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleDataBox /> spec Data is loaded renders component 1`] = `
<div
  style="height: auto;"
>
  <div
    class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasBetaBadge"
  >
    <div
      class="euiCard__content"
    >
      <span
        class="euiTitle euiTitle--small euiCard__title"
        id="random_html_idTitle"
      >
        <div
          style="display: flex; flex-direction: row; align-content: flexStart;"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.59 10.059 7.35 5.18h1.3L8.4 10.06h-.81Zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184ZM2 14a1 1 0 0 1-.878-1.479l6-11a1 1 0 0 1 1.756 0l6 11A1 1 0 0 1 14 14H2Zm0-1h12L8 2 2 13Z"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="euiTitle euiTitle--small"
            style="margin-left: 12px; margin-top: -3px;"
          >
            Sample title
          </h2>
          <button
            class="euiLink euiLink--primary"
            data-test-subj="flyoutInfoButton"
            style="margin-left: 12px;"
            type="button"
          >
            Info
          </button>
        </div>
      </span>
      <div
        class="euiCard__children"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="height: 70px;"
          >
            <p
              style="text-align: left; line-height: 1.4; max-height: 4.2px;"
            >
              Sample description
            </p>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
            style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton-isDisabled"
                data-test-subj="loadDataButton"
                disabled=""
                style="width: 300px;"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Detector created
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <a
                class="euiLink euiLink--primary"
                data-test-subj="viewSampleDetectorLink"
                href="anomaly-detection-dashboards#/detectors/sample-detector-id"
                rel="noreferrer"
              >
                View detector and sample data
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="euiCard__betaBadgeWrapper"
    >
      <span
        class="euiBetaBadge euiBetaBadge--hollow euiCard__betaBadge"
        id="random_html_idBetaBadge"
        title="INSTALLED"
      >
        INSTALLED
      </span>
    </span>
  </div>
</div>
`;

exports[`<SampleDataBox /> spec Data is loading renders component 1`] = `
<div
  style="height: auto;"
>
  <div
    class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
  >
    <div
      class="euiCard__content"
    >
      <span
        class="euiTitle euiTitle--small euiCard__title"
        id="random_html_idTitle"
      >
        <div
          style="display: flex; flex-direction: row; align-content: flexStart;"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.59 10.059 7.35 5.18h1.3L8.4 10.06h-.81Zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184ZM2 14a1 1 0 0 1-.878-1.479l6-11a1 1 0 0 1 1.756 0l6 11A1 1 0 0 1 14 14H2Zm0-1h12L8 2 2 13Z"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="euiTitle euiTitle--small"
            style="margin-left: 12px; margin-top: -3px;"
          >
            Sample title
          </h2>
          <button
            class="euiLink euiLink--primary"
            data-test-subj="flyoutInfoButton"
            style="margin-left: 12px;"
            type="button"
          >
            Info
          </button>
        </div>
      </span>
      <div
        class="euiCard__children"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="height: 70px;"
          >
            <p
              style="text-align: left; line-height: 1.4; max-height: 4.2px;"
            >
              Sample description
            </p>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
            style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton-isDisabled"
                data-test-subj="loadDataButton"
                disabled=""
                style="width: 300px;"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiLoadingSpinner euiLoadingSpinner--medium euiButtonContent__spinner"
                  />
                  <span
                    class="euiButton__text"
                  >
                    Creating detector
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SampleDataBox /> spec Data not loaded renders component 1`] = `
<div
  style="height: auto;"
>
  <div
    class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
  >
    <div
      class="euiCard__content"
    >
      <span
        class="euiTitle euiTitle--small euiCard__title"
        id="random_html_idTitle"
      >
        <div
          style="display: flex; flex-direction: row; align-content: flexStart;"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
            />
          </svg>
          <h2
            class="euiTitle euiTitle--small"
            style="margin-left: 12px; margin-top: -3px;"
          >
            Sample title
          </h2>
          <button
            class="euiLink euiLink--primary"
            data-test-subj="flyoutInfoButton"
            style="margin-left: 12px;"
            type="button"
          >
            Info
          </button>
        </div>
      </span>
      <div
        class="euiCard__children"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        >
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            style="height: 70px;"
          >
            <p
              style="text-align: left; line-height: 1.4; max-height: 4.2px;"
            >
              Sample description
            </p>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
            style="height: 100px; margin-top: 0px; margin-bottom: 0px;"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary"
                data-test-subj="loadDataButton"
                style="width: 300px;"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Sample button description
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
